@@ -364,6 +364,7 @@
                 <directory>${project.basedir}/src/main/java</directory>
                 <filtering>false</filtering>
                 <includes>
+                    <include>**/*.wav</include>
                     <include>**/*.xml</include>
                     <include>**/*.fxml</include>
                     <include>**/*.png</include>
@@ -490,7 +491,11 @@
                         <option>-Dprism.verbose=false</option>
                         <option>-Dprism.forceGPU=false</option>
                         <option>-Dorg.apache.commons.lang3.SystemUtils.JAVA_SPECIFICATION_VERSION=17</option>
-                        <option>-Djogamp.gluegen.UseTempJarCache=true</option>                        
+                        <option>-Djogamp.gluegen.UseTempJarCache=true</option>
+                        <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>
+                        <option>--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED</option>
+                        <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>
+                        <option>--add-opens=javafx.base/javafx.beans=ALL-UNNAMED</option>
                     </options>
                 </configuration>
             </plugin>
@@ -569,6 +574,10 @@
                         <option>-Dorg.apache.commons.lang3.SystemUtils.JAVA_SPECIFICATION_VERSION=17</option>
                         <option>-Djogamp.gluegen.UseTempJarCache=true</option>
                         <option>-Djava.net.useSystemProxies=true</option>
+                        <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>
+                        <option>--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED</option>
+                        <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>
+                        <option>--add-opens=javafx.base/javafx.beans=ALL-UNNAMED</option>
                     </options>
                     <systemProperties>
                         <systemProperty>
@@ -780,6 +789,10 @@
                                         <option>-Djava.net.useSystemProxies=true</option>
                                         <option>-Xmx2g</option>
                                         <option>-XX:+UseG1GC</option>
+                                        <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>
+                                        <option>--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED</option>
+                                        <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>
+                                        <option>--add-opens=javafx.base/javafx.beans=ALL-UNNAMED</option>
                                     </options>
                                     <systemProperties>
                                         <systemProperty>
@@ -828,6 +841,10 @@
                                         <option>-XX:+UseG1GC</option>
                                         <option>-Xdebug</option>
                                         <option>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005</option>
+                                        <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>
+                                        <option>--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED</option>
+                                        <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>
+                                        <option>--add-opens=javafx.base/javafx.beans=ALL-UNNAMED</option>
                                     </options>
                                     <systemProperties>
                                         <systemProperty>
